updated spacing to fix alignment of featured content

--- a/assets/src/scss/_7_pages/_index.scss
+++ b/assets/src/scss/_7_pages/_index.scss
@@ -160,7 +160,7 @@
             height: 150px;
         }
         @include breakpoint(large) {
-            max-width: 350px;
+            max-width: 365px;
         }
 
         div {
